[FIX] - Corrected the business logic and adjusted the integration unit test